# CyberCompass

./: .gitignore  Dockerfile  LICENSE.md  Makefile  Modelfile  README.md  RELEASE_V1.0.md  create-model.sh  cybersecurity-tips.md  docker-compose.yml  user_stories.md  user_stories_v2.0.md
ai-backend/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  test_character_consistency.py  test_content_generator.py
ai-backend/config/: agents.yaml
ai-backend/docs/: AGENT_IMPLEMENTATION_SUMMARY.md  CHANGELOG_UV_MIGRATION.md  FLOWS_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_NOTES.md  MULTILINGUAL_SUPPORT.md  PROJECT_STRUCTURE.md  QUICKSTART.md  SUPABASE_SETUP.md  TASK_2_IMPLEMENTATION.md  TASK_6_IMPLEMENTATION.md  UV_GUIDE.md
ai-backend/scripts/: setup.ps1  setup.sh  verify_setup.py
ai-backend/src/: __init__.py  config.py  main.py
ai-backend/src/agents/: __init__.py  analytics_agent.py  base.py  catfish_character.py  deepfake_analyst.py  ethics_mentor.py  factory.py  social_media_simulator.py
ai-backend/src/api/: __init__.py  websocket.py
ai-backend/src/database/: __init__.py  supabase_client.py
ai-backend/src/flows/: README.md  __init__.py  catfish_detection_flow.py  deepfake_detection_flow.py  flow_examples.py  social_media_simulation_flow.py
ai-backend/src/models/: __init__.py  database.py  requests.py  responses.py
ai-backend/src/repositories/: __init__.py  analytics_repository.py  base_repository.py  challenge_repository.py  conversation_repository.py  session_repository.py
ai-backend/src/services/: ERROR_HANDLING_GUIDE.md  __init__.py  analytics_engine.py  conversation_engine.py  conversation_memory.py  cultural_content_service.py  fallback_service.py  gamification.py  graceful_degradation.py  health_monitor.py  language_service.py
ai-backend/src/tools/: __init__.py  character_consistency.py  content_generator.py  deepfake_analysis.py  typing_delay.py
ai-backend/src/utils/: __init__.py  cultural_agent_helper.py  error_handler.py  exceptions.py
ai-backend/tests/: __init__.py  test_error_handling.py  test_task_2_implementation.py
ai-backend/tests/integration/: conftest.py  test_agent_collaboration.py  test_crewai_flows.py  test_memory_persistence.py  test_runner.py  test_simple_integration.py
ai-backend/tests/performance/: README.md  __init__.py  conftest.py  run_performance_tests.py  test_basic_performance.py  test_concurrent_users.py  test_load_testing.py  test_memory_monitoring.py  test_performance_suite.py  test_websocket_performance.py  validate_performance_tests.py
ai-backend/tests/unit/: QUICK_START.md  (+8 more)
(+191 files in other folders)
